# SPDX-FileCopyrightText: 2023 Google LLC
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "bittide-rust-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hs-bindgen = { version = "0.8.0", features = ["full"] }
hs-bindgen-types = { version = "0.8.0" }
static_assertions = "1.1.0"

[patch.crates-io]
hs-bindgen-attribute = { git = "https://github.com/kleinreact/hs-bindgen-attribute.git", branch = "v0.8.0-path-fix" }

[lib]
crate-type = ["staticlib"]

[workspace]
