cabal-version:      2.4
name:               bittide-rust-ffi
version:            0.1.0
build-type:         Custom
License:            Apache-2.0
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
Copyright:          Copyright © 2022-2023 Google LLC
extra-source-files: src/lib.rs

custom-setup
  setup-depends: Cabal, base, directory, process

common common-options
  default-language: Haskell2010
  build-depends: base
  ghc-options: -Wall -Wcompat

library
  import: common-options
  exposed-modules: Bittide.Simulate.RustFFI
                   Bittide.Simulate.RustFFI.Sizes
  hs-source-dirs:  src
  build-depends:   template-haskell
  extra-libraries: bittide_rust_ffi
