cabal-version:       2.4
name:                bittide-shake
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022-2023 Google LLC

data-files:
  data/scripts/*.py
  data/tcl/*.tcl

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    base16-bytestring,
    bittide-extra,
    bittide,
    bytestring,
    clash-cores,
    clash-lib,
    clash-prelude,
    clash-protocols,
    containers,
    cryptohash-sha256,
    directory,
    elastic-buffer-sim,
    extra,
    filepath,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    Glob,
    MissingH,
    pretty-simple,
    process,
    shake,
    split,
    string-interpolate,
    template-haskell,
    text,
    unix

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Clash.Shake.Extra
    Clash.Shake.Flags
    Clash.Shake.Vivado
    Development.Shake.Extra
  autogen-modules:
    Paths_bittide_shake
  other-modules:
    Paths_bittide_shake

executable shake
  import: common-options
  main-is: bin/Shake.hs
  Build-Depends:
      aeson
    , ansi-terminal
    , base16-bytestring
    , binary
    , bittide-shake
    , bytestring
    , clash-ghc
    , clash-lib
    , cryptohash-sha256
    , deepseq
    , extra
    , Glob
    , pretty-simple
    , shake
    , template-haskell
    , text
    , utf8-string
  other-modules:
    Paths_bittide_shake
  autogen-modules:
    Paths_bittide_shake

executable clash
  import: common-options
  main-is: bin/Clash.hs
  Build-Depends: clash-ghc, bittide-shake

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:    base, bittide-shake, doctest-parallel >= 0.1
  default-language: Haskell2010

test-suite unittests
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: unittests.hs
  ghc-options: -threaded -with-rtsopts=-N
  other-modules:
    Paths_bittide_shake
  autogen-modules:
    Paths_bittide_shake
  build-depends:
    , bittide-shake
    , filepath
    , pretty-simple
    , tasty
    , tasty-golden
