cabal-version:       2.4
name:                bittide-shake
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022-2023 Google LLC

data-files:
  data/scripts/*.py
  data/tcl/*.tcl

common common-options
  ghc-options:
    -Wall -Wcompat
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    base16-bytestring,
    bytestring,
    cassava,
    clash-lib,
    clash-prelude,
    cryptohash-sha256,
    deepseq,
    directory,
    extra,
    filepath,
    Glob,
    process,
    vector,
    shake,
    string-interpolate,
    text,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Clash.Shake.Extra
    Clash.Shake.Flags
    Clash.Shake.Vivado
    Development.Shake.Csv
    Development.Shake.Extra
    Development.Shake.Vcd
  autogen-modules:
    Paths_bittide_shake
  other-modules:
    Paths_bittide_shake

executable shake
  import: common-options
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
  main-is: bin/Shake.hs
  Build-Depends:
    , ansi-terminal
    , bittide-shake
  other-modules:
    Paths_bittide_shake
  autogen-modules:
    Paths_bittide_shake

executable clash
  import: common-options
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
  main-is: bin/Clash.hs
  Build-Depends: clash-ghc, bittide-shake

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
  build-depends:    base, bittide-shake, doctest-parallel >= 0.3.0.1
  default-language: Haskell2010
