cabal-version:       2.4
name:                bittide-shake
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022-2024 Google LLC

data-files:
  data/scripts/*.py
  data/tcl/*.tcl

common common-options
  ghc-options:
    -Wall -Wcompat
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    base16-bytestring,
    bytestring,
    clash-lib,
    clash-prelude,
    cryptohash-sha256,
    extra,
    filepath,
    vector,
    shake,
    string-interpolate,
    text,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Clash.Shake.Extra
    Clash.Shake.Flags
    Clash.Shake.Vivado
    Development.Shake.Extra
    Paths.Bittide.Shake
  autogen-modules:
    Paths_bittide_shake
  other-modules:
    Paths_bittide_shake

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
                    -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
  build-depends:    base, bittide-shake, doctest-parallel >= 0.3.0.1
  default-language: Haskell2010

executable shake
  import: common-options
  ghc-options: -Wall -Wcompat -threaded -rtsopts
               -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
  main-is: exe/Main.hs
  Build-Depends:
    , ansi-terminal
    , bittide-shake
    , directory
    , Glob
    , process
    , tasty-hunit
