cabal-version:       2.4
name:                bittide-tools
synopsis:            Bittide specific tools required for development, CI,
                     and testing
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2024 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  build-depends:
    base,
    Cabal,
    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.7.0 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat
  default-language: Haskell2010

executable program-stream
  import: common-options
  ghc-options: -Wall -Wcompat -threaded
               -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
  main-is: program/stream/Main.hs
  Build-Depends:
    base,
    bittide,
    bytestring,
    clash-prelude,

executable cc-sim
  import: common-options
  hs-source-dirs: clockcontrol/sim/src
  main-is: Main.hs
  other-modules: Domain
  build-depends:
    aeson,
    bittide-experiments,
    bytestring,
    directory,
    filepath,
    happy-dot,
    optparse-applicative
  -- enable rtsopts so we can setup memory limits
  ghc-options: -Wall -Wcompat -threaded
               -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS

executable cc-plot
  import: common-options
  main-is: clockcontrol/plot/Main.hs
  build-depends:
    array,
    bittide,
    bittide-experiments,
    bittide-instances,
    bytestring,
    cassava,
    cassava-conduit,
    conduit,
    containers,
    directory,
    filepath,
    text,
    typelits-witnesses,
    vector,
  default-extensions: ImplicitPrelude
  -- enable rtsopts so we can setup memory limits
  ghc-options: -Wall -Wcompat -threaded
               -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS

executable hitl-config-gen
  import: common-options
  main-is: hitl/config-gen/Main.hs
  build-depends:
    bittide-instances,
    bittide-experiments,
    bytestring,
    directory,
    filepath,
    optparse-applicative,
    template-haskell
  -- We need -xm20000000 because of a memory allocation bug after a kernel update
  ghc-options: -Wall -Wcompat -threaded
               -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
