cabal-version:       2.4
name:                bittide
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022-2023 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables the optimization.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  default-language: Haskell2010
  build-depends:
    ghc-typelits-extra >= 0.4.4,
    ghc-typelits-knownnat >= 0.7.7,
    ghc-typelits-natnormalise >= 0.7.7,

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    Cabal,
    aeson,
    array,
    base,
    bittide-extra,
    bytestring,
    cassava,
    clash-cores,
    clash-lib >= 1.6.3 && < 1.8,
    clash-prelude >= 1.6.3 && < 1.8,
    clash-protocols,
    clash-vexriscv,
    constraints >= 0.13.3 && < 0.15,
    containers >= 0.4.0 && < 0.7,
    directory,
    elf,
    exceptions,
    process,
    random,
    string-interpolate ^>= 0.3,
    template-haskell,
  exposed-modules:
    Bittide.Arithmetic.Ppm
    Bittide.Arithmetic.Time
    Bittide.Calendar
    Bittide.ClockControl
    Bittide.ClockControl.Callisto
    Bittide.ClockControl.Callisto.Util
    Bittide.ClockControl.Si5391A
    Bittide.ClockControl.Si5395J
    Bittide.ClockControl.Si539xSpi
    Bittide.ClockControl.StabilityChecker
    Bittide.Counter
    Bittide.DoubleBufferedRam
    Bittide.ElasticBuffer
    Bittide.Link
    Bittide.Node
    Bittide.ProcessingElement
    Bittide.ProcessingElement.DeviceTreeCompiler
    Bittide.ProcessingElement.ReadElf
    Bittide.ProcessingElement.Util
    Bittide.ScatterGather
    Bittide.SharedTypes
    Bittide.Switch
    Bittide.Wishbone
    Clash.Cores.Extra
    Clash.Cores.UART.Extra
    Clash.Cores.Xilinx.Extra
    Clash.Sized.Extra
    Data.Constraint.Nat.Extra
    System.IO.Temp.Extra
  other-modules:
    Paths_bittide

executable clash
  import: common-options
  main-is: bin/Clash.hs
  Build-Depends: base, bittide, clash-ghc

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
  hs-source-dirs:   tests

  build-depends:
    base,
    bittide,
    doctest-parallel >= 0.2 && < 0.3,
    filepath

test-suite unittests
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: UnitTests.hs
  ghc-options: -threaded -with-rtsopts=-N
  other-modules:
    Tests.Calendar
    Tests.ClockControl.Si539xSpi
    Tests.Counter
    Tests.DoubleBufferedRam
    Tests.ElasticBuffer
    Tests.Haxioms
    Tests.Link
    Tests.ProcessingElement.ReadElf
    Tests.ScatterGather
    Tests.Shared
    Tests.StabilityChecker
    Tests.Switch
    Tests.Wishbone
  build-depends:
    HUnit,
    base,
    bittide,
    bytestring,
    clash-cores,
    clash-lib,
    clash-prelude,
    clash-prelude-hedgehog >= 1.6 && < 1.8,
    clash-protocols,
    constraints >= 0.13.3 && < 0.15,
    containers,
    elf,
    hedgehog >= 1.0 && < 1.1,
    tasty >= 1.4 && < 1.5,
    tasty-hedgehog >= 1.2 && < 1.3,
    tasty-hunit,
    tasty-th,
